Major revision of project strucutre, modularization and commenting pipelines

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Useful starting lines\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,14 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Data and methods\n",
+    "# --- IMPORTANT this notebook has to be run from inside the /notebook subdirectory for it to import properly\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "y_train, x_train, ids_train = hp.load_csv_data('./data/train.csv', sub_sample=False)"
+    "# Path hack.\n",
+    "import sys, os\n",
+    "sys.path.insert(0, os.path.abspath('..'))\n",
+    "import scripts.helpers as hp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train, x_train, ids_train = hp.load_csv_data('../data/train.csv', sub_sample=False)"
    ]
   },
   {
@@ -33,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -69,35 +96,36 @@
       "---the sample minimum for each feature---\n",
       "[-999.       0.       6.329    0.    -999.    -999.    -999.       0.208\n",
       "    0.      46.104    0.047   -1.414 -999.      20.      -2.499   -3.142\n",
-      "   26.      -2.505   -3.142    0.109   -3.142   13.678    0.    -999.\n",
-      " -999.    -999.    -999.    -999.    -999.       0.   ]\n",
+      "   26.      -2.505   -3.142    0.109   -3.142   13.678    0.    -999.    -999.\n",
+      " -999.    -999.    -999.    -999.       0.   ]\n",
       "\n",
       "---the lower quartile for each feature---\n",
-      "[  78.10075   19.241     59.38875   14.06875 -999.      -999.\n",
-      " -999.         1.81       2.841     77.55       0.883     -1.371\n",
-      " -999.        24.59175   -0.925     -1.575     32.375     -1.014\n",
-      "   -1.522     21.398     -1.575    123.0175     0.      -999.\n",
-      " -999.      -999.      -999.      -999.      -999.         0.     ]\n",
+      "[  78.10075   19.241     59.38875   14.06875 -999.      -999.      -999.\n",
+      "    1.81       2.841     77.55       0.883     -1.371   -999.        24.59175\n",
+      "   -0.925     -1.575     32.375     -1.014     -1.522     21.398     -1.575\n",
+      "  123.0175     0.      -999.      -999.      -999.      -999.      -999.\n",
+      " -999.         0.     ]\n",
       "\n",
       "---the median for each feature---\n",
       "[ 105.012    46.524    73.752    38.4675 -999.     -999.     -999.\n",
       "    2.4915   12.3155  120.6645    1.28     -0.356  -999.       31.804\n",
       "   -0.023    -0.033    40.516    -0.045     0.086    34.802    -0.024\n",
-      "  179.739     1.       38.96     -1.872    -2.093  -999.     -999.\n",
-      " -999.       40.5125]\n",
+      "  179.739     1.       38.96     -1.872    -2.093  -999.     -999.     -999.\n",
+      "   40.5125]\n",
       "\n",
       "---the upper quartile for each feature---\n",
-      "[130.60625  73.598    92.259    79.169     0.49     83.446    -4.593\n",
-      "   2.961    27.591   200.47825   1.777     1.225     0.       45.017\n",
-      "   0.898     1.565    53.39      0.959     1.618    51.895     1.561\n",
-      " 263.37925   2.       75.349     0.433     0.503    33.703    -2.457\n",
-      "  -2.275   109.93375]\n",
+      "[ 130.60625   73.598     92.259     79.169      0.49      83.446     -4.593\n",
+      "    2.961     27.591    200.47825    1.777      1.225      0.        45.017\n",
+      "    0.898      1.565     53.39       0.959      1.618     51.895      1.561\n",
+      "  263.37925    2.        75.349      0.433      0.503     33.703     -2.457\n",
+      "   -2.275    109.93375]\n",
       "\n",
       "---the sample maximum for each feature---\n",
-      "[1192.026  690.075 1349.351 2834.999    8.503 4974.979   16.69     5.684\n",
-      " 2834.999 1852.462   19.773    1.414    1.     764.408    2.497    3.142\n",
-      "  560.271    2.503    3.142 2842.617    3.142 2003.976    3.    1120.573\n",
-      "    4.499    3.141  721.456    4.5      3.142 1633.433]\n"
+      "[ 1192.026   690.075  1349.351  2834.999     8.503  4974.979    16.69\n",
+      "     5.684  2834.999  1852.462    19.773     1.414     1.      764.408\n",
+      "     2.497     3.142   560.271     2.503     3.142  2842.617     3.142\n",
+      "  2003.976     3.     1120.573     4.499     3.141   721.456     4.5\n",
+      "     3.142  1633.433]\n"
      ]
     }
    ],
@@ -128,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -288,43 +316,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation between y and DER_mass_MMC 0.2391490578915459\n",
-      "Correlation between y and DER_mass_transverse_met_lep -0.35142795586167713\n",
-      "Correlation between y and DER_mass_vis -0.014055273784852627\n",
-      "Correlation between y and DER_pt_h 0.19252632856874902\n",
-      "Correlation between y and DER_deltaeta_jet_jet 0.14164599256566465\n",
-      "Correlation between y and DER_mass_jet_jet 0.19176608807477116\n",
-      "Correlation between y and DER_prodeta_jet_jet 0.14055440046509635\n",
-      "Correlation between y and DER_deltar_tau_lep 0.012245481285482975\n",
-      "Correlation between y and DER_pt_tot -0.015287426687781514\n",
-      "Correlation between y and DER_sum_pt 0.1532359324758141\n",
-      "Correlation between y and DER_pt_ratio_lep_tau -0.19539789618287715\n",
-      "Correlation between y and DER_met_phi_centrality 0.2717518770516496\n",
-      "Correlation between y and DER_lep_eta_centrality 0.14134598859646377\n",
-      "Correlation between y and PRI_tau_pt 0.23523797587836742\n",
-      "Correlation between y and PRI_tau_eta -0.0009432510582117524\n",
-      "Correlation between y and PRI_tau_phi -0.0044025386863884184\n",
-      "Correlation between y and PRI_lep_pt -0.03194758680534837\n",
-      "Correlation between y and PRI_lep_eta 0.0015162353770597236\n",
-      "Correlation between y and PRI_lep_phi 0.004125447411524855\n",
-      "Correlation between y and PRI_met 0.022465751510785933\n",
-      "Correlation between y and PRI_met_phi 0.0074753421885902635\n",
-      "Correlation between y and PRI_met_sumet 0.13552026152268518\n",
-      "Correlation between y and PRI_jet_num 0.13354912308169195\n",
-      "Correlation between y and PRI_jet_leading_pt 0.15760414567634956\n",
-      "Correlation between y and PRI_jet_leading_eta 0.15046926004977912\n",
-      "Correlation between y and PRI_jet_leading_phi 0.1504680377929272\n",
-      "Correlation between y and PRI_jet_subleading_pt 0.14071436695043768\n",
-      "Correlation between y and PRI_jet_subleading_eta 0.14126491377601597\n",
-      "Correlation between y and PRI_jet_subleading_phi 0.14125568650533826\n",
-      "Correlation between y and PRI_jet_all_pt 0.13429572666925302\n"
+      "Correlation between y and DER_mass_MMC 0.239149057892\n",
+      "Correlation between y and DER_mass_transverse_met_lep -0.351427955862\n",
+      "Correlation between y and DER_mass_vis -0.0140552737849\n",
+      "Correlation between y and DER_pt_h 0.192526328569\n",
+      "Correlation between y and DER_deltaeta_jet_jet 0.141645992566\n",
+      "Correlation between y and DER_mass_jet_jet 0.191766088075\n",
+      "Correlation between y and DER_prodeta_jet_jet 0.140554400465\n",
+      "Correlation between y and DER_deltar_tau_lep 0.0122454812855\n",
+      "Correlation between y and DER_pt_tot -0.0152874266878\n",
+      "Correlation between y and DER_sum_pt 0.153235932476\n",
+      "Correlation between y and DER_pt_ratio_lep_tau -0.195397896183\n",
+      "Correlation between y and DER_met_phi_centrality 0.271751877052\n",
+      "Correlation between y and DER_lep_eta_centrality 0.141345988596\n",
+      "Correlation between y and PRI_tau_pt 0.235237975878\n",
+      "Correlation between y and PRI_tau_eta -0.000943251058212\n",
+      "Correlation between y and PRI_tau_phi -0.00440253868639\n",
+      "Correlation between y and PRI_lep_pt -0.0319475868053\n",
+      "Correlation between y and PRI_lep_eta 0.00151623537706\n",
+      "Correlation between y and PRI_lep_phi 0.00412544741152\n",
+      "Correlation between y and PRI_met 0.0224657515108\n",
+      "Correlation between y and PRI_met_phi 0.00747534218859\n",
+      "Correlation between y and PRI_met_sumet 0.135520261523\n",
+      "Correlation between y and PRI_jet_num 0.133549123082\n",
+      "Correlation between y and PRI_jet_leading_pt 0.157604145676\n",
+      "Correlation between y and PRI_jet_leading_eta 0.15046926005\n",
+      "Correlation between y and PRI_jet_leading_phi 0.150468037793\n",
+      "Correlation between y and PRI_jet_subleading_pt 0.14071436695\n",
+      "Correlation between y and PRI_jet_subleading_eta 0.141264913776\n",
+      "Correlation between y and PRI_jet_subleading_phi 0.141255686505\n",
+      "Correlation between y and PRI_jet_all_pt 0.134295726669\n"
      ]
     }
    ],
@@ -342,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
