--- a/notebooks/least_squares.ipynb
+++ b/notebooks/least_squares.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -25,36 +16,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- IMPORTANT this notebook has to be run from inside the /notebook subdirectory for it to import properly\n",
     "# Import helpers and model implementations\n",
-    "from scripts.proj1_helpers import *\n",
-    "from scripts.implementations import *"
+    "# Path hack.\n",
+    "import sys, os\n",
+    "sys.path.insert(0, os.path.abspath('..'))\n",
+    "\n",
+    "from scripts.implementations import *\n",
+    "from scripts.cross_validation import *\n",
+    "from scripts.helpers import *\n",
+    "from scripts.split import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Data set\n",
-    "y_train_l, x_train_l, ids_train = load_csv_data('./data/train.csv', sub_sample=False)\n",
-    "_, x_test_l, ids_test = load_csv_data('./data/test.csv', sub_sample=False)"
+    "y_train_l, x_train_l, ids_train = load_csv_data('../data/train.csv', sub_sample=False)\n",
+    "_, x_test_l, ids_test = load_csv_data('../data/test.csv', sub_sample=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Entire Pipeline in one go: From Cleaning to Submission"
+    "# Entire Pipeline in one go: From Cleaning to Submission\n",
+    "## Linear Regression: Solving normal equations (Least squares)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +67,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creation of a model we can submit\n",
+    "### Step 1\n",
+    "All we need to do to adapt this pipeline to another model, is to change the following two transform methods"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +90,7 @@
     "    # Step 2: Split data set into 3 datasets depending on jet num\n",
     "    x_0, x_1, x_23 = split_x(x)\n",
     "    \n",
-    "    # Step 3: Remove aberrant just to be sure ? FIXME\n",
+    "    # Step 3: Remove aberrant just to be sure\n",
     "    # Step 4: Standardize data\n",
     "    x_0, x_0_mean, x_0_std = standardize(x_0)\n",
     "    x_1, x_1_mean, x_1_std = standardize(x_1)\n",
@@ -103,10 +111,7 @@
     "\n",
     "def transform_y_least_squares(y, x):\n",
     "    # Step 1: add dimension to y \n",
-    "    y = np.expand_dims(y_train, axis=1)\n",
-    "    \n",
-    "    # For logistic regression: bring y back to 0 and 1 -> for logistic regression #FIXME bring back\n",
-    "    # y = np.array([0 if i == -1 else 1 for i in y])\n",
+    "    y = np.expand_dims(y, axis=1)\n",
     "    \n",
     "    # Step 2: Split data set into 3 datasets depending on jet num\n",
     "    y_0, y_1, y_23 = split_y(y, x)\n",
@@ -116,21 +121,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# STEP 2: Perform cross validation"
+    "### Step 2\n",
+    "Test performance on entire dataset (here withoute cross validation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# STEP 3: Learn on entire dataset\n",
     "y_t0, y_t1, y_t23 = transform_y_least_squares(y_train, x_train)\n",
     "tx_t0, tx_t1, tx_t23 = transform_x_least_squares(x_train)\n",
     "\n",
@@ -140,8 +143,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3\n",
+    "Check accuracy of trained model on same training set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +161,7 @@
        "0.75976"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,8 +172,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a submission file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
