Change notebook location

--- a/scripts/least_squares.ipynb
+++ b/scripts/least_squares.ipynb
@@ -20,21 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- IMPORTANT this notebook has to be run from inside the /notebook subdirectory for it to import properly\n",
     "# Import helpers and model implementations\n",
-    "# Path hack.\n",
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath('..'))\n",
-    "\n",
-    "from scripts.implementations import *\n",
-    "from scripts.cross_validation import *\n",
-    "from scripts.helpers import *\n",
-    "from scripts.split import *"
+    "from implementations import *\n",
+    "from cross_validation import *\n",
+    "from helpers import *\n",
+    "from split import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# STEP 1: Define two methods, one tranforms x, the other y\n",
     "\n",
-    "def transform_x_least_squares(x):\n",
+    "def transform_x_least_squares(x, deg):\n",
     "    # Step 1: Replace the -999 values in the first column by the mean\n",
     "    x[:, 0][x[:, 0] == -999.0] = np.mean(x[:, 0][x[:, 0] != -999.0])\n",
     "    \n",
@@ -130,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_t0, y_t1, y_t23 = transform_y_least_squares(y_train, x_train)\n",
-    "tx_t0, tx_t1, tx_t23 = transform_x_least_squares(x_train)\n",
+    "tx_t0, tx_t1, tx_t23 = transform_x_least_squares(x_train, 1)\n",
     "\n",
     "w_0, loss_w0 = least_squares(y_t0, tx_t0)\n",
     "w_1, loss_w1 = least_squares(y_t1, tx_t1)\n",
@@ -152,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +156,13 @@
        "0.75976"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_prediction_train = predict_labels_datasets(w_0, w_1, w_2, x_train, transform_x_least_squares)\n",
+    "y_prediction_train = predict_labels_datasets(w_0, w_1, w_2, x_train, transform_x_least_squares, 1)\n",
     "compute_accuracy(y_train, y_prediction_train)"
    ]
   },
@@ -180,12 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict y_test to submit on kaggle\n",
-    "y_prediction_test = predict_labels_datasets(w_0, w_1, w_2, x_test, transform_x_least_squares)\n",
+    "y_prediction_test = predict_labels_datasets(w_0, w_1, w_2, x_test, transform_x_least_squares, 1)\n",
     "create_csv_submission(ids_test, y_prediction_test, \"submission.csv\")"
    ]
   }
