--- a/scripts/logistic_regression.ipynb
+++ b/scripts/logistic_regression.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -20,16 +29,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- IMPORTANT this notebook has to be run from inside the /notebook subdirectory for it to import properly\n",
     "# Import helpers and model implementations\n",
-    "# Path hack.\n",
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath('..'))\n",
-    "\n",
-    "from scripts.implementations import *\n",
-    "from scripts.cross_validation import *\n",
-    "from scripts.helpers import *\n",
-    "from scripts.split import *"
+    "from implementations import *\n",
+    "from cross_validation import *\n",
+    "from helpers import *\n",
+    "from split import *"
    ]
   },
   {
@@ -77,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform_x_logistic(x):\n",
+    "def transform_x_logistic(x, deg):\n",
     "    # Step 1: Replace the -999 values in the first column by the mean\n",
     "    x[:, 0][x[:, 0] == -999.0] = np.mean(x[:, 0][x[:, 0] != -999.0])\n",
     "    \n",
@@ -139,88 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current iteration=0, loss=69329.41963251591\n",
-      "weights size:0.00011500367132997651\n",
-      "Current iteration=10000, loss=39850.58308588407\n",
-      "weights size:3.9466733121429556\n",
-      "Current iteration=20000, loss=38995.848163005365\n",
-      "weights size:5.22011483723575\n",
-      "Current iteration=30000, loss=39090.07414855655\n",
-      "weights size:5.533675671480695\n",
-      "Current iteration=40000, loss=38917.28943327911\n",
-      "weights size:5.348124682223529\n",
-      "Current iteration=50000, loss=39199.924327438\n",
-      "weights size:5.49808260045738\n",
-      "Current iteration=60000, loss=38868.37405440737\n",
-      "weights size:5.118220449471801\n",
-      "Current iteration=70000, loss=38847.56347529571\n",
-      "weights size:5.423796997992938\n",
-      "Current iteration=80000, loss=39037.477273451936\n",
-      "weights size:5.538770820359847\n",
-      "Current iteration=90000, loss=39144.69035506584\n",
-      "weights size:5.426523194866387\n",
-      "loss=39126.00279489747\n",
-      "Current iteration=0, loss=53703.452163828064\n",
-      "weights size:0.000132468746995737\n",
-      "Current iteration=10000, loss=40117.62688569149\n",
-      "weights size:2.595493105977552\n",
-      "Current iteration=20000, loss=39489.14401356343\n",
-      "weights size:2.9886215580958613\n",
-      "Current iteration=30000, loss=39652.53572291706\n",
-      "weights size:3.5372354318905597\n",
-      "Current iteration=40000, loss=39039.78279621938\n",
-      "weights size:3.806556982239779\n",
-      "Current iteration=50000, loss=40503.164646103636\n",
-      "weights size:3.4782499867037706\n",
-      "Current iteration=60000, loss=39340.558983981435\n",
-      "weights size:3.62780061517467\n",
-      "Current iteration=70000, loss=38959.70471947554\n",
-      "weights size:3.8569863449979427\n",
-      "Current iteration=80000, loss=39791.989173159425\n",
-      "weights size:3.863122608873323\n",
-      "Current iteration=90000, loss=39345.202559826204\n",
-      "weights size:3.598376662299979\n",
-      "loss=39367.31958564088\n",
-      "Current iteration=0, loss=50106.09572631753\n",
-      "weights size:0.000204509092484431\n",
-      "Current iteration=10000, loss=37163.290692343966\n",
-      "weights size:2.2211793402102984\n",
-      "Current iteration=20000, loss=36482.02556557597\n",
-      "weights size:2.939695277463405\n",
-      "Current iteration=30000, loss=35985.32135835115\n",
-      "weights size:3.4300504977512234\n",
-      "Current iteration=40000, loss=35991.593861682246\n",
-      "weights size:3.499037732533156\n",
-      "Current iteration=50000, loss=36947.89653815632\n",
-      "weights size:3.9148233095077076\n",
-      "Current iteration=60000, loss=35937.62560619208\n",
-      "weights size:3.887919142005215\n",
-      "Current iteration=70000, loss=36766.63807493925\n",
-      "weights size:3.8576614739968744\n",
-      "Current iteration=80000, loss=36238.94661748215\n",
-      "weights size:3.880535113804674\n",
-      "Current iteration=90000, loss=36290.02301977352\n",
-      "weights size:4.057964993600314\n",
-      "loss=36116.27840141439\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_t0, y_t1, y_t23 = transform_y_logistic(y_train, x_train)\n",
-    "tx_t0, tx_t1, tx_t23 = transform_x_logistic(x_train)\n",
+    "tx_t0, tx_t1, tx_t23 = transform_x_logistic(x_train, 1)\n",
     "\n",
     "initial_w_0 = np.zeros((tx_t0.shape[1], 1))\n",
     "initial_w_1 = np.zeros((tx_t1.shape[1], 1))\n",
     "initial_w_23 = np.zeros((tx_t23.shape[1], 1))\n",
     "\n",
-    "lambda_ = 0.01\n",
+    "lambda_ = 0.0\n",
     "gamma = 0.005\n",
     "max_iters = 100000\n",
     "\n",
@@ -250,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -258,16 +192,16 @@
     {
      "data": {
       "text/plain": [
-       "0.77034"
+       "0.787844"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_prediction_train = predict_labels_datasets_logistic(w_0, w_1, w_2, x_train, transform_x_logistic)\n",
+    "y_prediction_train = predict_labels_datasets_logistic(w_0, w_1, w_2, x_train, transform_x_logistic, 1)\n",
     "compute_accuracy(y_train, y_prediction_train)"
    ]
   },
@@ -280,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict y_test to submit on kaggle\n",
-    "y_prediction_test = predict_labels_datasets_logistic(w_0, w_1, w_2, x_test, transform_x_logistic)\n",
+    "y_prediction_test = predict_labels_datasets_logistic(w_0, w_1, w_2, x_test, transform_x_logistic, 1)\n",
     "create_csv_submission(ids_test, y_prediction_test, \"submission.csv\")"
    ]
   },
